# experimenting-langchain-agents

./: .gitignore  1_basic_agent.py  2_lg-agent.py  3_lg_multi_agent_sync.py  4_lg_multi_agent_async.py  5_lgraph_agent.py  README.md  basic-agent.py  lg-agent.py  lg-multi-agent-sync.py  lg-multi-agent.py  main.py  pyproject.toml  requirements.txt
crew_ai/: 1_email_agent.ipynb  2_email_agent_with_tool.ipynb  3_crew_multi_tool_agent.ipynb  4_crew_default_tools.ipynb  5_crew_default_tools_using_yml.ipynb
crew_ai/config/: agents.yml  tasks.yml
utils/: helpers.py  tools.py
