[project]
name = "lg-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langsmith>=0.6.4",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "crewai[tools]>=0.141.0",
    "google-generativeai>=0.8.5",
    "ipywidgets>=8.1.8",
]
